[package]
name = "wgpu-fractals"
version = "0.1.0"
authors = ["debilausaure"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
image = "0.23"
wgpu = { version = "0.11", features = [ ] }
#wgpu = { version = "0.11", features = [ "trace" ] }
winit = "0.25"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "texture-test"
path = "src/main.rs"
